test_files/should_pass/styled.wpdoc
{
  "version": 1,
  "text": "Bold and Italic text sample",
  "style": {
    "bold": true,
    "italic": true,
    "font": "EBGaramond-Regular",
    "fontSize": 24
  }
}
