test_files/should_fail/missing_text.wpdoc
{
  "version": 1,
  "style": {
    "bold": true
  }
}
